# unsloth_finetuning

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: cicd.yml
examples/: example_api_call.py
src/notebook/: gemma_2_finetuning.ipynb
src/tests/: test_api.py
src/web/: app.py
